# cs231n

./: README.md  test.txt
CS148/: RA1.odt  install_opengl.txt
CS148/FinalProject/: Augmentor.cpp  Augmentor.hpp  CMakeLists.txt  Common.hpp  CornerDetection.cpp  CornerDetection.hpp  KLTTracker.cpp  KLTTracker.hpp  ORBTracker.cpp  ORBTracker.hpp  PM.cpp  PM.hpp  PlaneTracker.cpp  PlaneTracker.hpp  main.cpp
CS148/HW/: RA2.docx  RA6.docx
CS148/HW/ReadingAssignment/: .~lock.RA4.docx#  RA1.docx  RA2.odt  RA3.docx  RA4.docx
CS148/HW/__MACOSX/: ._hw1.cpp
CS148/HW/hw1/: circle200.ppm  hw1  hw1.cpp  hw1_ellipse  hw1_ellipse.cpp
CS148/HW/hw2/: hw2  main.cpp  main.cpp~
CS148/HW/hw3/: .~lock.CS148Summer2016HW3-Shaders.docx#  Camera.h~  hw3  phong.frag  phong.frag~  phong.vs  phong.vs~
CS148/HW/rayTracker/: raytracer
CS231N/MyHW/assignment1/: features.ipynb  softmax.ipynb  svm.ipynb
CS231N/MyHW/assignment2/: ConvolutionalNetworks.ipynb  FullyConnectedNets.ipynb  multi-layer.py
CS231N/assignment2/: FullyConnectedNets.ipynb
CS231N/assignment2 copy/: BatchNormalization.ipynb  ConvolutionalNetworks.ipynb  FullyConnectedNets.ipynb
LearnOpenGL/: CMakeLists.txt  CMakeLists.txt~
LearnOpenGL/includes/learnopengl/: model.h
LearnOpenGL/src/rain_effect/: RainEffect_PPT.odp  background.frag  background.frag~  demo.ogv  drop.h  drop.h~  main.cpp  main.cpp~  rain-drop.frag  rain-drop.frag~  rain-drop.vs  rain-drop.vs~  rain.h  rain_effect.odp
Model/025-Pikachu/: Pikachu.mtl
Quant/: test.py  test1.py  test2.py
assignment1/: features.ipynb  knn.ipynb  svm.ipynb  two_layer_net.ipynb
assignment1/cs231n/classifiers/: k_nearest_neighbor.py  linear_svm.py  neural_net.py
assignment2/: BatchNormalization.ipynb  ConvolutionalNetworks.ipynb  Dropout.ipynb  FullyConnectedNets.ipynb
assignment2/cs231n/: layer_utils.py  layers.py  optim.py
assignment2/cs231n/classifiers/: cnn.py  fc_net.py
assignment3/: RNN_Captioning.ipynb
assignment3/cs231n/: rnn_layers.py
assignment3/cs231n/classifiers/: rnn.py
cs224d/assignment1/: q1_softmax.py  q2_gradcheck.py  q2_neural.py  q3_run.py  q3_sgd.py  q3_word2vec.py  q4_sentiment.py  q4_softmaxreg.py
cs224d/assignment1/cs224d/: pip-selfcheck.json
cs231A/hw1/ps1/: p2.py  p3.py
cs231A/hw2/ps2/: factorization_method.py  fundamental_matrix_estimation.py  image_rectification.py  triangulation.py
cs231A/ps3/single_object_recognition/: main.py
cs231A/ps3/space_carving/: main.py
cs231M-CV/Artsy/: .cproject  .project
cs231M-CV/Artsy/jni/: Android.mk  NativeCore.cpp  NativeCore.hpp
cs231M-CV/test-videos/: mona-lisa-blur-extra-credit.avi  mona-lisa-blur.avi
cs231n-project/: testing_stuff.ipynb
cs344/Problem Sets/Problem Set 3/: student_func.cu
cs344/Problem Sets/Problem Set 4/: student_fun.cu.online  student_func.cu
opengl_tests/cube/: CMakeLists.txt  CMakeLists.txt~
opengl_tests/cylindermap/: CMakeLists.txt  CMakeLists.txt~  README.md  cylindermap.cpp  global.h  shaders.h
opengl_tests/cylindermap/includes/learnopengl/: mesh.h~
opengl_tests/dinoshade/: CMakeLists.txt  CMakeLists.txt~  dinoshade.c
opengl_tests/glut-tutortials/: CMakeLists.txt
opengl_tests/stringPrint/: main.c
opengl_tests/teapot/: CMakeLists.txt  teapot.c  teapot.c~
randomStuff/: test2.py
randomStuff/AutoFetch/: AutoEigen.py  AutoStock.py  global_variable.py  ml.py  process_data.py  stats_excel.py  straddle_option.py  understand_excel.py
randomStuff/AutoFetch/data/: .~lock.EstimateResult.xlsx#  .~lock.EstimateResult2018-01-19.xlsx#  2017-11-14AAPL_Today_2017-11-14_call2017-11-17.csv  2017-11-14AAPL_Today_2017-11-14_call2017-12-17.csv  2017-11-14AMD_Today_2017-11-14_call2017-11-17.csv  2017-11-14AMD_Today_2017-11-14_call2017-12-17.csv  2017-11-14BIDU_Today_2017-11-14_call2017-11-17.csv  2017-11-14BIDU_Today_2017-11-14_call2017-12-17.csv  2017-11-14FB_Today_2017-11-14_call2017-11-17.csv  2017-11-14FB_Today_2017-11-14_call2017-12-17.csv  2017-11-14GOOG_Today_2017-11-14_call2017-11-17.csv  2017-11-14GOOG_Today_2017-11-14_call2017-12-17.csv  2017-11-14NVDA_Today_2017-11-14_call2017-11-17.csv  2017-11-14NVDA_Today_2017-11-14_call2017-12-17.csv  2017-11-14QCOM_Today_2017-11-14_call2017-11-17.csv  2017-11-14QCOM_Today_2017-11-14_call2017-12-17.csv  2017-11-14QIWI_Today_2017-11-14_call2017-11-17.csv  2017-11-14QIWI_Today_2017-11-14_call2017-12-17.csv  2017-11-14SNAP_Today_2017-11-14_call2017-11-17.csv  2017-11-14SNAP_Today_2017-11-14_call2017-12-17.csv  2017-11-14SQ_Today_2017-11-14_call2017-11-17.csv  2017-11-14SQ_Today_2017-11-14_call2017-12-17.csv  2017-11-14TSLA_Today_2017-11-14_call2017-11-17.csv  2017-11-14TSLA_Today_2017-11-14_call2017-12-17.csv  2017-11-14TWTR_Today_2017-11-14_call2017-11-17.csv  2017-11-14TWTR_Today_2017-11-14_call2017-12-17.csv  2017-11-14YELP_Today_2017-11-14_call2017-11-17.csv  2017-11-14YELP_Today_2017-11-14_call2017-12-17.csv  AAPL Today_2017-11-14_call2017-11-17.csv  AAPL Today_2017-11-14_call2017-12-17.csv  AMD Today_2017-11-14_call2017-11-17.csv  AMD Today_2017-11-14_call2017-12-17.csv  BIDU Today_2017-11-14_call2017-11-17.csv  BIDU Today_2017-11-14_call2017-12-17.csv  EstimateResult.xls  EstimateResult.xlsx  EstimateResult2018-01-19.xlsx  EstimateResult2018-01-26.xlsx  FB Today_2017-11-14_call2017-11-17.csv  FB Today_2017-11-14_call2017-12-17.csv  (+19 more)
randomStuff/AutoFetch/utils/: finance_get.py  get_quote.py  get_stock_history_data.py  (+1 more)
stats315b/: fit.ps
stats315b/Marketing/: Income_Big.txt  Occupation_Info.txt
stats315b/hw1/: .~lock.hw1_stats315b.doc#  hw1_script.R  hw1_stats315b.doc
stats315b/hw2/: hw2_script.R
stats315b/hw3/: hw3_script.R
(+8263 files in other folders)
